package app.entities;

public enum CupcakeType
{
    TOP,
    BOTTOM,
    BOTH
}
