@startuml
'https://plantuml.com/class-diagram

class Main {
}

package entities {
    enum CupcakeType {
        TOP
        BOTTOM
    }
    class CupcakeFlavour {
        - final int cupakeFlavourId
        - final int price
        - final String flavourName
        - final CupcakeType type;
        + getters()
        'override
        + String toString()
    }

    class Cupcake {
        - final CupcakeFlavour top
        - final CupcakeFlavour bottom
        + Cupcake(top, bottom)
        + CupcakeFlavour getCupcakeBottom()
        + CupcakeFlavour getCupcakeTop()
        + int getPrice()
        'override
        + String toString()
    }

    class User {
        - int userId
        - String username
        - String password
        - String role
        - int balance
        + User(userId, username, role, balance)
        + int getUserId()
        + String getUsername()
        + String getRole()
        + boolean isAdmin()
        + int getBalance()
        + void pay()
    }

    class Order {
        - int orderId
        - String name
        - LocalDate datePlaced
        - LocalDate datePaid
        - LocalDate dateCompleted
        - String status
        - User user
        - List<OrderLine> orderLines
        + Order()
        + int getOrderId()
        + String getName()
        + LocalDate getDatePlaced()
        + LocalDate getDatePaid()
        + LocalDate getDateCompleted()
        + String getStatus()
        + User getUser()
        + List<OrderLine> getOrderLines()
        + void updateStatus(String)
    }
    class OrderLine {
        - int orderId
        - int quantity
        - Cupcake cupcake
        - int price
        + int getOrderId()
        + int getQuantity()
        + Cupcake getCupcake()
        + int getPrice()
    }
}

package controllers {
    class CupcakeController {
        + static void addRoutes()
        + static void showFrontpage()
        - static void activateFlavour()
        - static void addCupcakeFlavour()
        - static void deactivateFlavour()
        - static void showCupcakeFlavours()

    }
    class UserController {
        + static void addRoutes()
        - static void createUser()
        - static void depositToCustomerBalance()
        - static void doLogin()
        - static void doLogout()
        - static void passwordCheck()
        - static void redirectUserByRole()
        - static void showAdminPage()
        - static void showCustomerPage()
    }
    class OrderController {
        + static void addRoutes()
        - static void addCupcakeToBasket()
        - static void checkout()
        - static void deleteOrder()
        - static void removeCupcakeFromBasket()
        - static void showBasket()
        - static void showOrderDetails()
        - static void showOrderHistory()
    }
}

package persistence {
    class ConnectionPool {
    }
    class CupcakeMapper {
        + static void addCupcakeFlavour()
        + static List<CupcakeFlavour> getActiveFlavours()
        + static List<CupcakeFlavour> getInactiveFlavours()
        + static CupcakeFlavour getCupcakeFlavour()
        + static List<CupcakeFlavour> getFlavours()
        + static void updateFlavourAvailability()

    }
    class OrderMapper {
        + static int createOrderInDb()
        + static void createOrderlinesInDb()
        + static void deleteOrder()
        + static Order getOrder()
        + static List<Order> getOrders()
        + static List<Order> getOrdersByUserId()
    }

    class UserMapper {
        + static void createUser()
        + static List<User> getAllUsers()
        + static User getUser()
        + static void increaseCustomerBalance()
        + static void payForOrder()
        + static void login()
    }
}

package Test {
    class CupcakeMapperTest {
        }
    class OrderMapperTest {
        }
    class UserMapperTest {
        }
}

Main -- CupcakeController
Main -- OrderController
Main -- UserController
CupcakeController -- CupcakeMapper
OrderController -- OrderMapper
UserController -- UserMapper
Cupcake *-- CupcakeFlavour
Order *-- OrderLine
Order o-- User
OrderLine *-- Cupcake
CupcakeFlavour *- CupcakeType

@enduml